--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>A Visual Demonstration of background-attachment: fixed;</title>
+    <title>Demo para CSS MAsk usando background-attachment: fixed;</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/style.css" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Alike|Roboto:900" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div class="content right illustration_01">
@@ -23,7 +23,7 @@
       <p>`Well!' thought Alice to herself, `after such a fall as this, I shall think nothing of tumbling down stairs! How brave they'll all think me at home! Why, I wouldn't say anything about it, even if I fell off the top of the house!' (Which was very likely true.) </p>
     </div>
     <div class="separator">
-      <h3>Another Section Starts Here</h3>
+      <h3>Segunda Secci&oacute;n</h3>
     </div>
     <div class="content left illustration_02">
       <div class="smallscreen">
@@ -37,7 +37,7 @@
       <p>There were doors all round the hall, but they were all locked; and when Alice had been all the way down one side and up the other, trying every door, she walked sadly down the middle, wondering how she was ever to get out again. </p>
     </div>
     <div class="separator">
-      <h3>Another Section Starts Here</h3>
+      <h3>Tercera Secci&oacute;n</h3>
     </div>
     <div class="content right illustration_03">
       <div class="smallscreen">
@@ -51,7 +51,7 @@
       <p>However, this bottle was NOT marked `poison,' so Alice ventured to taste it, and finding it very nice, (it had, in fact, a sort of mixed flavour of cherry- tart, custard, pine-apple, roast turkey, toffee, and hot buttered toast,) she very soon finished it off. </p>
     </div>
     <div class="separator">
-      <h3>Another Section Starts Here</h3>
+      <h3>Cuarta Secci&oacute;n</h3>
     </div>
     <div class="content left illustration_04">
       <div class="smallscreen">
@@ -66,7 +66,7 @@
       <p>So she set to work, and very soon finished off the cake. </p>
     </div>
     <div class="separator">
-      <h1>THE END</h1>
+      <h3>Sigueme en Twitter como @Zaevega</h3>
     </div>
   </body>
 </html>
