--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Neopxl-cssmask-demo by Metaviolet</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Neopxl-cssmask-demo</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Demo para CSS MAsk usando background-attachment: fixed;</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+    <div class="separador_small">
+      <h3>Efecto m&aacute;scara con CSS</h3>
+      <h1>From Neopxl-cssmask-demo</h1>
         <p>Este repositorio aloja el Demo para el proyecto Efecto máscara con CSS</p>
 
         <p class="view"><a href="https://github.com/Metaviolet/Neopxl-CSSMask-Demo">View the Project on GitHub <small>Metaviolet/Neopxl-CSSMask-Demo</small></a></p>
@@ -26,46 +22,61 @@
           <li><a href="https://github.com/Metaviolet/Neopxl-CSSMask-Demo/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/Metaviolet/Neopxl-CSSMask-Demo">View On <strong>GitHub</strong></a></li>
         </ul>
-      </header>
-      <section>
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/Metaviolet">Metaviolet</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+    </div>
+    <div class="contenido right img_01">
+      <div class="smallscreen">
+        <image src="images/hd_blush.png"></image>
+      </div>
+      <h2>Haz Scroll hacia abajo para sorprenderte! </h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nibh diam, venenatis sed dolor quis, lobortis facilisis lectus. Vivamus gravida iaculis convallis. Proin posuere justo id elit ultrices lacinia. Etiam lobortis sollicitudin commodo. Donec quis lacinia est. Nulla facilisi. Nulla facilisi. Vestibulum placerat purus magna, eu vulputate neque eleifend nec. Quisque mollis turpis at ipsum tincidunt semper. Nam volutpat diam eget purus lobortis aliquet.</p>
+      <p>Proin volutpat aliquet mattis. Vestibulum molestie fermentum molestie. In posuere venenatis elementum. Nam dictum ut ligula vestibulum malesuada. Nullam sed consectetur metus. Nunc sit amet odio non magna sagittis euismod. Proin tincidunt lorem at egestas interdum. Praesent metus lacus, mollis vitae leo eu, malesuada tincidunt arcu. Fusce sed tincidunt turpis, eget gravida neque. Nunc placerat velit ut ultrices porttitor. Etiam et sapien pharetra, eleifend nisi et, sollicitudin nisi. Ut luctus malesuada turpis vel blandit. Nam vel scelerisque elit, vitae pulvinar nisl.</p>
+     
+    
+    </div>
+    <div class="separador">
+      <h3>Segunda Secci&oacute;n</h3>
+    </div>
+    <div class="contenido left img_02">
+      <div class="smallscreen">
+        <image src="images/girl.png"></image>
+      </div>
+      <h2>Un efecto simple y atractivo usando s&oacute;lo CSS</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nibh diam, venenatis sed dolor quis, lobortis facilisis lectus. Vivamus gravida iaculis convallis. Proin posuere justo id elit ultrices lacinia. Etiam lobortis sollicitudin commodo. Donec quis lacinia est. Nulla facilisi. Nulla facilisi. Vestibulum placerat purus magna, eu vulputate neque eleifend nec. Quisque mollis turpis at ipsum tincidunt semper. Nam volutpat diam eget purus lobortis aliquet.</p>
+      <p>Proin volutpat aliquet mattis. Vestibulum molestie fermentum molestie. In posuere venenatis elementum. Nam dictum ut ligula vestibulum malesuada. Nullam sed consectetur metus. Nunc sit amet odio non magna sagittis euismod. Proin tincidunt lorem at egestas interdum. Praesent metus lacus, mollis vitae leo eu, malesuada tincidunt arcu. Fusce sed tincidunt turpis, eget gravida neque. Nunc placerat velit ut ultrices porttitor. Etiam et sapien pharetra, eleifend nisi et, sollicitudin nisi. Ut luctus malesuada turpis vel blandit. Nam vel scelerisque elit, vitae pulvinar nisl.</p>
+      <p>Nullam id iaculis turpis, ac vestibulum neque. Aliquam tellus massa, placerat commodo tristique dictum, egestas ut orci. Mauris semper magna ac odio sagittis, id egestas tortor consequat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed at ornare odio. Nam rutrum et velit sed auctor. Nulla accumsan dictum nulla quis ullamcorper. Proin nec nunc quis nulla dictum convallis quis ut justo. Nulla at mollis massa. Ut porta velit non malesuada sollicitudin. Pellentesque sed urna et elit laoreet consequat eu at nulla. Curabitur tristique augue ante, quis accumsan lectus tincidunt vel. Donec vitae nisl vitae tortor ultrices vestibulum. Maecenas et enim non felis lacinia sodales.</p>
+    
+    ing elit. Pellentesque nibh ipsum, placerat nec erat et, gravida ultrices ante. Etiam non ante vel eros pharetra pulvinar.</p>
+    </div>
+    <div class="separador">
+      <h3>Tercera Secci&oacute;n</h3>
+    </div>
+    <div class="contenido right img_03">
+      <div class="smallscreen">
+        <image src="images/blush.png"></image>
+      </div>
+      <h2>Genial para Presentaciones de producto</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nibh diam, venenatis sed dolor quis, lobortis facilisis lectus. Vivamus gravida iaculis convallis. Proin posuere justo id elit ultrices lacinia. Etiam lobortis sollicitudin commodo. Donec quis lacinia est. Nulla facilisi. Nulla facilisi. Vestibulum placerat purus magna, eu vulputate neque eleifend nec. Quisque mollis turpis at ipsum tincidunt semper. Nam volutpat diam eget purus lobortis aliquet.</p>
+      <p>Proin volutpat aliquet mattis. Vestibulum molestie fermentum molestie. In posuere venenatis elementum. Nam dictum ut ligula vestibulum malesuada. Nullam sed consectetur metus. Nunc sit amet odio non magna sagittis euismod. Proin tincidunt lorem at egestas interdum. Praesent metus lacus, mollis vitae leo eu, malesuada tincidunt arcu. Fusce sed tincidunt turpis, eget gravida neque. Nunc placerat velit ut ultrices porttitor. Etiam et sapien pharetra, eleifend nisi et, sollicitudin nisi. Ut luctus malesuada turpis vel blandit. Nam vel scelerisque elit, vitae pulvinar nisl.</p>
+      <p>Nullam id iaculis turpis, ac vestibulum neque. Aliquam tellus massa, placerat commodo tristique dictum, egestas ut orci. Mauris semper magna ac odio sagittis, id egestas tortor consequat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed at ornare odio. Nam rutrum et velit sed auctor. Nulla accumsan dictum nulla quis ullamcorper. Proin nec nunc quis nulla dictum convallis quis ut justo. Nulla at mollis massa. Ut porta velit non malesuada sollicitudin. Pellentesque sed urna et elit laoreet consequat eu at nulla. Curabitur tristique augue ante, quis accumsan lectus tincidunt vel. Donec vitae nisl vitae tortor ultrices vestibulum. Maecenas et enim non felis lacinia sodales.</p>
+    
+      
+    </div>
+    <div class="separador">
+      <h3>Cuarta Secci&oacute;n</h3>
+    </div>
+    <div class="contenido left img_04">
+      <div class="smallscreen">
+        <image src="images/model.png"></image>
+      </div>
+      <h2>O para lo que llegue a tu imaginaci&oacute;n</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nibh diam, venenatis sed dolor quis, lobortis facilisis lectus. Vivamus gravida iaculis convallis. Proin posuere justo id elit ultrices lacinia. Etiam lobortis sollicitudin commodo. Donec quis lacinia est. Nulla facilisi. Nulla facilisi. Vestibulum placerat purus magna, eu vulputate neque eleifend nec. Quisque mollis turpis at ipsum tincidunt semper. Nam volutpat diam eget purus lobortis aliquet.</p>
+      <p>Proin volutpat aliquet mattis. Vestibulum molestie fermentum molestie. In posuere venenatis elementum. Nam dictum ut ligula vestibulum malesuada. Nullam sed consectetur metus. Nunc sit amet odio non magna sagittis euismod. Proin tincidunt lorem at egestas interdum. Praesent metus lacus, mollis vitae leo eu, malesuada tincidunt arcu. Fusce sed tincidunt turpis, eget gravida neque. Nunc placerat velit ut ultrices porttitor. Etiam et sapien pharetra, eleifend nisi et, sollicitudin nisi. Ut luctus malesuada turpis vel blandit. Nam vel scelerisque elit, vitae pulvinar nisl.</p>
+      
+    
+      
+    </div>
+    <div class="separador_small">
+      <h3>Sigueme en Twitter como <a>@Zaevega</a></h3>
+    </div>
+  </body>
 </html>
