--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="separador_small">
       <h3>Efecto m&aacute;scara con CSS</h3>
       <h1>From Neopxl-cssmask-demo</h1>
-        <p>Este repositorio aloja el Demo para el proyecto Efecto máscara con CSS</p>
+        <p>Este repositorio aloja el Demo del Efecto máscara con CSS</p>
 
         <p class="view"><a href="https://github.com/Metaviolet/Neopxl-CSSMask-Demo">View the Project on GitHub <small>Metaviolet/Neopxl-CSSMask-Demo</small></a></p>
 
