--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Demo para CSS MAsk usando background-attachment: fixed;</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-  </head>
-  <body>
-    <div class="separador_small">
-      <h3>Efecto m&aacute;scara con CSS</h3>
+  <head>
+    <title>Demo para CSS MAsk usando background-attachment: fixed;</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+  <div class="separador_small">
+      <h3>Efecto m&aacute;scara con CSS</h3>
       <h1>From Neopxl-cssmask-demo</h1>
-        <p>Este repositorio aloja el Demo para el proyecto Efecto máscara con CSS</p>
+        <p>Este repositorio aloja el Demo del Efecto máscara con CSS</p>
 
         <p class="view"><a href="https://github.com/Metaviolet/Neopxl-CSSMask-Demo">View the Project on GitHub <small>Metaviolet/Neopxl-CSSMask-Demo</small></a></p>
 
@@ -70,10 +70,9 @@ ing elit. Pellentesque nibh ipsum, placerat nec erat et, gravida ultrices ante. 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nibh diam, venenatis sed dolor quis, lobortis facilisis lectus. Vivamus gravida iaculis convallis. Proin posuere justo id elit ultrices lacinia. Etiam lobortis sollicitudin commodo. Donec quis lacinia est. Nulla facilisi. Nulla facilisi. Vestibulum placerat purus magna, eu vulputate neque eleifend nec. Quisque mollis turpis at ipsum tincidunt semper. Nam volutpat diam eget purus lobortis aliquet.</p>
       <p>Proin volutpat aliquet mattis. Vestibulum molestie fermentum molestie. In posuere venenatis elementum. Nam dictum ut ligula vestibulum malesuada. Nullam sed consectetur metus. Nunc sit amet odio non magna sagittis euismod. Proin tincidunt lorem at egestas interdum. Praesent metus lacus, mollis vitae leo eu, malesuada tincidunt arcu. Fusce sed tincidunt turpis, eget gravida neque. Nunc placerat velit ut ultrices porttitor. Etiam et sapien pharetra, eleifend nisi et, sollicitudin nisi. Ut luctus malesuada turpis vel blandit. Nam vel scelerisque elit, vitae pulvinar nisl.</p>
 
-      
-    </div>
-    <div class="separador_small">
-      <h3>Sigueme en Twitter como <a>@Zaevega</a></h3>
-    </div>
-  </body>
+    </div>
+    <div class="separador_small">
+      <h3>Sigueme en Twitter como <a>@Zaevega</a></h3>
+  </div>
+  </body>
 </html>
