create project info container

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
   <div class="separador_small">
+      <div id="project_info">
       <h3>Efecto m&aacute;scara con CSS</h3>
       <h1>From Neopxl-cssmask-demo</h1>
         <p>Este repositorio aloja el Demo del Efecto máscara con CSS</p>
@@ -22,6 +23,7 @@
           <li><a href="https://github.com/Metaviolet/Neopxl-CSSMask-Demo/tarball/master">Download <strong>TAR Ball</strong></a></li>
           <li><a href="https://github.com/Metaviolet/Neopxl-CSSMask-Demo">View On <strong>GitHub</strong></a></li>
         </ul>
+        </div>
     </div>
     <div class="contenido right img_01">
     <div class="smallscreen">
@@ -51,7 +53,7 @@ ing elit. Pellentesque nibh ipsum, placerat nec erat et, gravida ultrices ante. 
     </div>
     <div class="contenido right img_03">
      <div class="smallscreen">
-       <image src="images/blush.png"></image>
+       <image src="images/makeup.png"></image>
      </div>
       <h2>Genial para Presentaciones de producto</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nibh diam, venenatis sed dolor quis, lobortis facilisis lectus. Vivamus gravida iaculis convallis. Proin posuere justo id elit ultrices lacinia. Etiam lobortis sollicitudin commodo. Donec quis lacinia est. Nulla facilisi. Nulla facilisi. Vestibulum placerat purus magna, eu vulputate neque eleifend nec. Quisque mollis turpis at ipsum tincidunt semper. Nam volutpat diam eget purus lobortis aliquet.</p>
